# mkcreds

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
src/: credential.rs  main.rs  tpm.rs
tests/: common.nix  default.nix  vm-test.nix
tests/basic/: default.nix
tests/encryption/: default.nix
tests/encryption-sha1/: default.nix
tests/encryption-sha256/: default.nix
tests/encryption-sha384/: default.nix
tests/encryption-sha512/: default.nix
tests/expected-pcr/: default.nix
tests/expiration/: default.nix
tests/options/: default.nix
tests/vm-test/: default.nix
